@@ -2,6 +2,7 @@ package ch.ivyteam.enginecockpit.monitor;
 
 import java.lang.management.ManagementFactory;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.faces.bean.ManagedBean;
 import javax.faces.bean.ViewScoped;
@@ -27,11 +28,12 @@ public class StartEventBean {
 
   public void refresh() {
     try {
+      // needs to be modifiable for sorting	
       beans = ManagementFactory.getPlatformMBeanServer()
               .queryNames(new ObjectName("ivy Engine:type=Process Start Event Bean,application=*,pm=*,pmv=*,name=*"), null)
               .stream()
               .map(StartEvent::new)
-              .toList();
+              .collect(Collectors.toList());
     } catch (MalformedObjectNameException ex) {
       HANDLER.showError("Cannot read start event beans", ex);
     }
